--- a/zkspringboot-demos/zkspringboot-minimal-jar/build.gradle
+++ b/zkspringboot-demos/zkspringboot-minimal-jar/build.gradle
@@ -22,7 +22,7 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 ext {
-	zkspringbootVersion = '1.0.3'
+	zkspringbootVersion = '1.0.4-SNAPSHOT'
 }
 
 dependencies {
