--- a/zkspringboot-demos/zkspringboot-demo-jar/build.gradle
+++ b/zkspringboot-demos/zkspringboot-demo-jar/build.gradle
@@ -22,7 +22,7 @@ sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
 
 ext {
-	zkspringbootVersion = '1.0.3'
+	zkspringbootVersion = '1.0.4-SNAPSHOT'
 	zkVersion = '8.5.2.1-Eval'
 	zatsVersion = '2.0.0'
 	junitVersion = '4.12'
