--- a/zkspringboot-demos/zkspringboot-demo-jar/pom.xml
+++ b/zkspringboot-demos/zkspringboot-demo-jar/pom.xml
@@ -25,7 +25,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<zkspringboot.version>1.0.3</zkspringboot.version>
+		<zkspringboot.version>1.0.4-SNAPSHOT</zkspringboot.version>
 		<springboot.version>2.0.4.RELEASE</springboot.version>
 		<zk.version>8.5.2.1-Eval</zk.version>
 		<zats.version>2.0.0</zats.version>
