--- a/zkspringboot-demos/zkspringboot-minimal-jar/pom.xml
+++ b/zkspringboot-demos/zkspringboot-minimal-jar/pom.xml
@@ -20,7 +20,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
-		<zkspringboot.version>1.0.3</zkspringboot.version>
+		<zkspringboot.version>1.0.4-SNAPSHOT</zkspringboot.version>
 		<springboot.version>2.0.4.RELEASE</springboot.version>
 	</properties>
 
