--- a/zkspringboot-demos/zkspringboot-demo-jar/src/main/resources/application.properties
+++ b/zkspringboot-demos/zkspringboot-demo-jar/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #see: https://docs.spring.io/spring-boot/docs/current/reference/html/common-application-properties.html
 #server.context-path=/zk-spring-boot
-#server.port=8080
-
+server.port=9898
+spring.profiles.active=dev
 zk.homepage=demo
 zk.zul-view-resolver-prefix=/zul
 zk.richlet-filter-mapping=/richlet/*
